--- a/lib/device_tracker_web/templates/device/show.html.eex
+++ b/lib/device_tracker_web/templates/device/show.html.eex
@@ -1,4 +1,9 @@
 <div>
-  <h1><%= @device.name %></h1>
-  <p><%= @device.settings %></p>
+  <h1 class="device"><%= @device.name %></h1>
+  <div>
+    <%= for {measurement, measurements} <- @device.measurements do %>
+      <p><%= measurement %></p>
+      <p><%= measurements.measurements %></p>
+    <% end %>
+  </div>
 </div>
