--- a/lib/device_tracker_web/templates/device/show.html.eex
+++ b/lib/device_tracker_web/templates/device/show.html.eex
@@ -2,9 +2,9 @@
   <h1 class="device"><%= @device.name %></h1>
   <div>
     <%= for {measurement, measurements} <- @device.measurements do %>
-      <p><%= measurement %></p>
-      <p><%= inspect(measurements.measurements) %></p>
-      <p><%= DeviceTracker.Metrics.average(measurements.measurements) %></p>
+      <p>Name: <%= measurement %></p>
+      <p>Measurements: <%= inspect(measurements.measurements) %></p>
+      <p>Average: <%= DeviceTracker.Metrics.average(measurements.measurements) %></p>
     <% end %>
   </div>
 </div>
